--- a/hrms-client/package.json
+++ b/hrms-client/package.json
@@ -13,14 +13,18 @@
     "@types/react-dom": "^18.2.18",
     "antd": "^5.12.8",
     "axios": "^1.6.5",
+    "lodash": "^4.17.21",
+    "mustache": "^4.2.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://52.66.240.51:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -44,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.202"
   }
 }
