--- a/hrms-client/package.json
+++ b/hrms-client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@react-oauth/google": "^0.12.1",
+    "@refinedev/antd": "^5.37.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "mustache": "^4.2.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
@@ -25,7 +27,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://52.66.240.51:8080",
+  "proxy": "http://43.205.255.228:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
