--- a/hrms-client/package.json
+++ b/hrms-client/package.json
@@ -2,6 +2,7 @@
   "name": "hrms",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@react-oauth/google": "^0.12.1",
