--- a/hrms-client/package.json
+++ b/hrms-client/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.18",
     "antd": "^5.12.8",
     "axios": "^1.6.5",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mustache": "^4.2.0",
     "node-sass": "^7.0.3",
