--- a/hrms-client/package.json
+++ b/hrms-client/package.json
@@ -15,11 +15,13 @@
     "@types/react-dom": "^18.2.18",
     "antd": "^5.14.1",
     "axios": "^1.6.5",
+    "chart.js": "^4.4.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mustache": "^4.2.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
